<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name" />

    <EditText
        android:id="@+id/breed_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/breed" />

    <EditText
        android:id="@+id/age_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number" />

    <EditText
        android:id="@+id/vaccinated_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/months_since_last_vaccination"
        android:inputType="number" />

    <EditText
        android:id="@+id/weight_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_kg"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/gender_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_pet1" />
</LinearLayout>